# EmergentCreativity

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: auto-merge.yml  ci-failure-fix.yml  ci.yml  issue-worker.yml
.opencode/mnemoria/: manifest.json
config/: rewards.yaml
scripts/: train.py  view.py
src/emergent_creativity/: __init__.py  sim_env.py
src/emergent_creativity/environment/: __init__.py  apartment.py  objects.py  physics_world.py  senses.py
src/emergent_creativity/nn/: __init__.py  architecture.py  online_learner.py  trainer.py
src/emergent_creativity/rewards/: __init__.py  ruleset.py
src/emergent_creativity/tenant/: __init__.py  actions.py  agent.py
src/emergent_creativity/ui/: viewer.py
tests/: test_actions.py  test_agent.py  test_apartment.py  test_network.py  test_objects.py  test_physics_world.py  test_rewards.py  test_senses.py  test_sim_env.py  test_trainer.py
tests/fixtures/: simple_box.urdf
tests/ui/: test_viewer.py
